# UniGe-S-DAI-Project-LLM-PROLOG

./: .gitignore  README.md  environment.yml  pyproject.toml  temp_kb.pl
src/: app.py  benchmark.py  knowledge_base.pl  main.py  prolog_extractor.py  prolog_validator.py  temp_kb.pl
