[project]
name = "sdai-llm-prolog"
version = "0.1.0"
description = ""
authors = [
    {name = "titoulef",email = "titouan.lefevre@ensta.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio (>=6.3.0,<7.0.0)",
    "transformers (>=4.57.5,<5.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "pyswip (>=0.3.3,<0.4.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "numpy (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
